add buttons to configure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
      <script src="./js/clock.js"></script>
    </head>
    <body onload="onload()">
-      <img id="logo" src="./resources/logo.png">
+      <img id="logo" src="./resources/img/logo.png">
+      <div id="setting">
+        <div id="button_wrapper">
+       	  <button id="btn_pause" class="setting_button"></button>
+       	  <button id="btn_plus" class="setting_button"></button>
+       	  <button id="btn_minus" class="setting_button"></button>
+       	  <button id="btn_rebuy" class="setting_button"></button>
+       	  <button id="btn_speed_up" class="setting_button"></button>
+       	  <button id="btn_speed_down" class="setting_button"></button>
+        </div>
+      </div>
       <div id="clock">
         <div id="top">
           <div>
