--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
       <div id="clock">
         <div id="top">
           <div>
-            <span lang="en">MTT</span>锦标赛<span lang="en">&11.11</span>专场<br/>
-            ——求是精英德扑第<span lang="en">7</span>期
-            </div>
+            求是精英德扑<span lang="en">MTT</span>锦标赛第<span lang="en">2</span>期
+          </div>
         </div>
         <div id="middle">
           <div id="left">
