--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="clock">
         <div id="top">
           <div>
-            求是精英德扑<span lang="en">MTT</span>锦标赛第<span lang="en">2</span>期
+            求是金鹰德扑<span lang="en">MTT</span>锦标赛第<span lang="en">3</span>期
           </div>
         </div>
         <div id="middle">
