--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       <div id="setting">
         <div id="button_wrapper">
        	  <button id="btn_pause" class="setting_button"></button>
-       	  <button id="btn_plus" class="setting_button"></button>
+       	  <!--<button id="btn_plus" class="setting_button"></button>-->
+          <button id="btn_undo" class="setting_button"></button>
        	  <button id="btn_minus" class="setting_button"></button>
        	  <button id="btn_rebuy" class="setting_button"></button>
        	  <button id="btn_speed_up" class="setting_button"></button>
