display rebuy count

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             </div>
             <div id="prize_player">
               <div class="margin_title">
-                奖励人数
+                重买人次
               </div>
-              <div class="margin_content" id="div_prize_cnt">
+              <div class="margin_content" id="div_rebuy_cnt">
               </div>
             </div>
           </div>
