--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
      <link rel="stylesheet" type="text/css" href="./css/clock.css">
+     <link rel="shortcut icon" href="favicon.png">
      <script src="./js/clock.js"></script>
    </head>
    <body onload="onload()">
